--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   google_fonts: ^6.2.1
   pdf: ^3.10.7
   printing: ^5.12.0
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
