--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
+  cloud_firestore: ^5.6.12
 
 dev_dependencies:
   flutter_test:
