--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -26,9 +26,16 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/new_logo.png"  # your new logo
 
 flutter:
   uses-material-design: true
   assets:
     - assets/Roboto-Regular.ttf
     - assets/Roboto-Bold.ttf
+    - assets/images/
