--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   cloud_firestore: ^5.6.12
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
