--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.6.12
   intl: ^0.19.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
