--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   cloud_firestore: ^5.6.12
+  firebase_messaging: ^15.1.4
+  flutter_local_notifications: ^18.0.1
   intl: ^0.19.0
   fl_chart: ^0.69.0
 
