--- a/ec_carwash/pubspec.yaml
+++ b/ec_carwash/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   intl: ^0.19.0
   fl_chart: ^0.69.0
+  file_picker: ^8.1.4
 
 dev_dependencies:
   flutter_test:
